# ssup

./: Cargo.toml  Cross.toml  Dockerfile  README  README.md
.github/workflows/: cd.yml  cdtest.yml  ci.yml
src/: cli.rs  main.rs  telegram.rs
