[package]
name = "sup"
version = "0.1.0"
authors = ["Shantanu Goel <shantz@shantanugoel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta"
notifica = "3"
log = "0.4"
env_logger = "0.8"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]
