[package]
name = "sup"
version = "0.2.0"
authors = ["Shantanu Goel <shantanu+sup@shantanugoel.com>"]
edition = "2018"
description = "A utility to send notifications to local system or telegram"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta"
notifica = "3"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]
