[package]
name = "ssup"
version = "0.3.4"
authors = ["Shantanu Goel <shantanu+ssup@shantanugoel.com>"]
edition = "2018"
description = "A utility to send notifications to local system or telegram"
homepage = "https://shantanugoel.com/"
repository = "https://github.com/shantanugoel/ssup/"
readme = "README.md"
keywords = ["notifications", "telegram", "bot", "cli"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta"
notifica = "3"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
shlex = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "rustls-tls"]
default-features = false
